Changed dollar to pund sign in confirmation email, fixed profile on smaller screen sizes, and other small changes for improved UX

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,3 +1,7 @@
+.profile-container {
+    margin-bottom: 65px;
+}
+
 .order-history {
     max-height: 50vh; /* was 416px height of profile form + submit button */
     overflow-y: auto;
